# pub.dev-hello

./: pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/hello/hello/: HelloPlugin.kt
android/src/test/kotlin/com/hello/hello/: HelloPluginTest.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/kotlin/com/hello/hello_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/runner/: Runner.rc
lib/: hello.dart  hello_web.dart
linux/: CMakeLists.txt  libaray
